2004-10-07  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/itemtool.py, gaphor/ui/*: updated to use new
	UndoManager interface of DiaCanvas2 0.14.0. Requires CVS version
	of diacanvas2 to work.

2004-10-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	Release 0.6.0

2004-09-28  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/itemtool.py, itemactions.py, nameditem.py:
	Added compatibility layer for Diacanvas 0.13.0.

2004-09-27  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/plugins/pynsource: created nice Dialog for loading files
	* data/plugins/liveobjectbrowser: Use AbstractWindow as mediator

2004-09-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/plugins/diagramlayout: new plugin, layout elements in a diagram
	* data/plugins/pynsource: new plugin. Create diagrams from Python
	code. Uses Andy Bulka's PyNSource code.
	# During creation of the plugin I noticed a bug in Associations:
	# The aggregation attribute of the wrong Property instance is used.
	# This behavior has been fixed:
	* gaphor/storage.py: added workaround in load_elements_generator()
	* gaphor/diagram/association.py: updated code to show aggregation on
	the right end.
	* gaphor/UML/uml2.gaphor: loaded and saved (bug no longer in data
	model)
	* utils/genUML2.py: updated.

2004-09-14  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/itemactions.py: Support new Editable interface.
	* gaphor/diagram/*.py: updated diagram items.

2004-09-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainactions.py: Removed multithread stuff.
	* gaphor/misc/gidlethread.py: new file. A speudo-thread implementation
	based on the GObject main loop.
	* gaphor/storage.py, gaphor/parser.py: rewrote the load and save
	functions to generators, to be used by the GIdleThread.

2004-09-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* setup.py: always do config check before build
	* gaphor/pluginmanager.py: Fixed plugin loading (no longer change